--- a/13-HTML&CSS-Intro/headers.html
+++ b/13-HTML&CSS-Intro/headers.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bg">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1. Headers</title>
-</head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
 
-<body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <h4>Heading</h4>
-    <h5>Heading</h5>
-    <h6>Heading</h6>
-</body>
+  <body>
+    <header>
+      <h1>HTML & CSS – Exercises</h1>
+    </header>
+
+    <main>
+      <div>
+        <h1>Heading</h1>
+        <h2>Heading</h2>
+        <h3>Heading</h3>
+        <h4>Heading</h4>
+        <h5>Heading</h5>
+        <h6>Heading</h6>
+      </div>
+    </main>
+
+    <footer>
+      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+    </footer>
+  </body>
 
 </html>
