--- a/13-HTML&CSS-Intro/links.html
+++ b/13-HTML&CSS-Intro/links.html
@@ -67,6 +67,15 @@
           <li>
             <p><a href="./links.html" target="_blank">Links</a></p>
           </li>
+          <li>
+            <p><a href="./images.html" target="_blank">Images</a></p>
+          </li>
+          <li>
+            <p><a href="./table.html" target="_blank">Table</a></p>
+          </li>
+          <li>
+            <p><a href="./forms.html" target="_blank">Forms</a></p>
+          </li>
         </ol>
       </div>
     </main>
