--- a/13-HTML&CSS-Intro/links.html
+++ b/13-HTML&CSS-Intro/links.html
@@ -56,25 +56,33 @@
         </p>
         <ol>
           <li>
-            <p><a href="./headers.html" target="_blank">Headers</a></p>
+            <p><a href="./headers.html">Headers</a></p>
           </li>
           <li>
-            <p><a href="./paragraphs.html" target="_blank">Paragraphs</a></p>
+            <p><a href="./paragraphs.html">Paragraphs</a></p>
           </li>
           <li>
-            <p><a href="./nested-lists.html" target="_blank">Order and Unordered Lists</a></p>
+            <p><a href="./nested-lists.html">Order and Unordered Lists</a></p>
           </li>
           <li>
-            <p><a href="./links.html" target="_blank">Links</a></p>
+            <p><a href="./links.html">Links</a></p>
           </li>
           <li>
-            <p><a href="./images.html" target="_blank">Images</a></p>
+            <p><a href="./images.html">Images</a></p>
           </li>
           <li>
-            <p><a href="./table.html" target="_blank">Table</a></p>
+            <p><a href="./table.html">Table</a></p>
           </li>
           <li>
-            <p><a href="./forms.html" target="_blank">Forms</a></p>
+            <p><a href="./forms.html">Forms</a></p>
+          </li>
+          <li>
+            <p><a href="./text-formatting.html">Text Formatting</a></p>
+          <li>
+            <p><a href="./inline-elements.html">Inline Elements</a></p>
+          </li>
+          <li>
+            <p><a href="./block-elements.html">Block Elements</a></p>
           </li>
         </ol>
       </div>
