--- a/index.html
+++ b/index.html
@@ -16,30 +16,38 @@
     <main>
       <div>
         <p>
-          <a href="https://careers.sirma.com/sirmaacademy.html" target="_blank">
+          <a href="https://careers.sirma.com/sirmaacademy.html">
             Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</a>
         </p>
         <ol>
           <li>
-            <p><a href="13-HTML&CSS-Intro/headers.html" target="_blank">Headers</a></p>
+            <p><a href="13-HTML&CSS-Intro/headers.html">Headers</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/paragraphs.html" target="_blank">Paragraphs</a></p>
+            <p><a href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
 
           <li>
-            <p><a href="13-HTML&CSS-Intro/nested-lists.html" target="_blank">Order and Unordered Lists</a></p>
+            <p><a href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/links.html" target="_blank">Links</a></p>
+            <p><a href="13-HTML&CSS-Intro/links.html">Links</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/images.html" target="_blank">Images</a></p>
+            <p><a href="13-HTML&CSS-Intro/images.html">Images</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/table.html" target="_blank">Table</a></p>
+            <p><a href="13-HTML&CSS-Intro/table.html">Table</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/forms.html" target="_blank">Forms</a></p>
+            <p><a href="13-HTML&CSS-Intro/forms.html">Forms</a></p>
+          </li>
+          <li>
+            <p><a href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
+          <li>
+            <p><a href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
+          </li>
+          <li>
+            <p><a href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
           </li>
         </ol>
       </div>
