--- a/13-HTML&CSS-Intro/inline-elements.html
+++ b/13-HTML&CSS-Intro/inline-elements.html
@@ -18,15 +18,16 @@
         <h1>Inline Elements</h1>
         <p>
           <span style="color: brown; font-weight: bold;">Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit.</span> Minus quibusdam sint, culpa aliquam ab non voluptas esse necessitatibus consequatur rerum?
-          <a href="https://demianvassilev.github.io/SirmaAcademy/" target="_blank"> Quasi illum qui facilis itaque iste
-            distinctio eaque similique ad.</a>
+            elit.</span> &nbsp;Minus quibusdam sint, culpa aliquam ab non voluptas esse necessitatibus consequatur
+          rerum? &nbsp; <a href="https://demianvassilev.github.io/SirmaAcademy/" target="_blank">Quasi illum qui facilis
+            itaque iste distinctio eaque similique ad.</a>
         </p>
         <p>
-          <span style="color: green; font-weight: bold;">Lorem ipsum dolor sit amet
+          <span style="color: green; font-weight: bold;">Lorem ipsum dolor sit amet &nbsp;&nbsp;
             <img src="./cat-1.jpg" height=55% alt="Human Genomes Are Surprisingly Cat-Like"
-              style="vertical-align: middle;"> consectetur adipisicing elit. <em>Aspernatur mollitia, dolores
-              necessitatibus asperiores. Repellendus quasi libero dicta delectus maxime vero? Quaerat.</em></span>
+              style="vertical-align: middle;"> &nbsp; consectetur adipisicing elit. <em>Aspernatur mollitia, dolores
+              necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?
+              &nbsp;Quaerat.</em></span>
         </p>
         <p>
           <span style="color: brown; font-weight: bold; font-style: italic; font-family: cursive;">Lorem ipsum dolor sit
