--- a/13-HTML&CSS-Intro/text-formatting.html
+++ b/13-HTML&CSS-Intro/text-formatting.html
@@ -15,7 +15,7 @@
 
     <main>
       <div>
-        <h1>Paragraphs</h1>
+        <h1>Text Formatting</h1>
         <p>
           <strong>Lorem ipsum dolor</strong>, <em>sit amet</em> consectetur adipisicing elit. <b>Minus quibusdam
             sint</b>, <i>culpa aliquam ab non voluptas esse necessitatibus consequatur rerum</i>? <u>Quasi illum qui
