--- a/13-HTML&CSS-Intro/inline-elements.html
+++ b/13-HTML&CSS-Intro/inline-elements.html
@@ -24,9 +24,10 @@
         </p>
         <p>
           <span style="color: green; font-weight: bold;">Lorem ipsum dolor sit amet &nbsp;&nbsp;
-            <img src="./cat-1.jpg" height=55% alt="Human Genomes Are Surprisingly Cat-Like"
-              style="vertical-align: middle;"> &nbsp; consectetur adipisicing elit. <em>Aspernatur mollitia, dolores
-              necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?
+            <a href="https://DemianVassilev.github.io/SirmaAcademy/">
+              <img src="./cat-1.jpg" height=55% alt="Human Genomes Are Surprisingly Cat-Like"
+                style="vertical-align: middle;"></a> &nbsp; consectetur adipisicing elit. <em>Aspernatur mollitia,
+              dolores necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?
               &nbsp;Quaerat.</em></span>
         </p>
         <p>
