Update images spaces

--- a/13-HTML&CSS-Intro/images.html
+++ b/13-HTML&CSS-Intro/images.html
@@ -22,7 +22,7 @@
         </p>
         <p>
           <img src="./cat-1.jpg" width=42% alt="Human Genomes Are Surprisingly Cat-Like">
-          <img src="./cat-2.jpg" width=56% alt="Human Genomes Are Surprisingly Cat-Like">
+          &nbsp;<img src="./cat-2.jpg" width=56% alt="Human Genomes Are Surprisingly Cat-Like">
           <img src="./cat-3.jpg" width=99% alt="Human Genomes Are Surprisingly Cat-Like">
         </p>
       </div>
