--- a/13-HTML&CSS-Intro/inline-elements.html
+++ b/13-HTML&CSS-Intro/inline-elements.html
@@ -17,33 +17,36 @@
       <div>
         <h1>Inline Elements</h1>
         <p>
-          <span style="color: brown; font-weight: bold;">Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit.</span> &nbsp;Minus quibusdam sint, culpa aliquam ab non voluptas esse necessitatibus consequatur
-          rerum? &nbsp; <a href="https://demianvassilev.github.io/SirmaAcademy/" target="_blank">Quasi illum qui facilis
-            itaque iste distinctio eaque similique ad.</a>
+          <span style="color: darkred; font-weight: bold; font-size: x-large;">Lorem ipsum dolor, sit amet consectetur
+            adipisicing.</span> &nbsp; <span style="color: darkblue; font-weight: bold; font-size: larger;">Minus
+            quibusdam sint, aliquam ab non esse necessitatibus consequatur?</span>
+          &nbsp; <a href="https://demianvassilev.github.io/SirmaAcademy/" target="_blank"><span
+              style="color: darkgreen; text-align: center; font-weight: 700; font-size: large;">Quasi illum qui facilis
+              itaque iste distinctio eaque similique ad</span></a>
         </p>
         <p>
-          <span style="color: green; font-weight: bold;">Lorem ipsum dolor sit amet &nbsp;&nbsp;
-            <a href="https://DemianVassilev.github.io/SirmaAcademy/">
-              <img src="./cat-1.jpg" height=55% alt="Human Genomes Are Surprisingly Cat-Like"
-                style="vertical-align: middle;"></a> &nbsp; consectetur adipisicing elit. <em>Aspernatur mollitia,
-              dolores necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?
-              &nbsp;Quaerat.</em></span>
+          <span style="color: green; font-weight: bold; font-size: x-large; font-style: italic;">Lorem ipsum dolor
+            sit amet &nbsp; <a href="https://DemianVassilev.github.io/SirmaAcademy/"><img src="./cat-1.jpg"
+                alt="Human Genomes Are Surprisingly Cat-Like" width="220px" style="vertical-align: middle;"></a>
+            &nbsp;consectetur adipisicing elit.</span> &nbsp;
+          <span style="color: darkgreen; font-style: italic; font-weight: bolder;">Aspernatur mollitia, dolores
+            necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?
+            &nbsp;Quaerat.</span>
         </p>
         <p>
-          <span style="color: brown; font-weight: bold; font-style: italic; font-family: cursive;">Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque commodi sapiente
-            soluta neque. Saepe veritatis rerum corrupti ipsam dolorum reprehenderit non. Animi sequi excepturi maiores
-            ullam.</span>
+          <span
+            style="color: darkcyan; font-weight: bold; font-style: italic; font-size: x-large; font-family: cursive;">Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
+            commodi sapiente soluta neque. Saepe veritatis rerum corrupti ipsam dolorum reprehenderit non. Animi sequi
+            excepturi maiores ullam.</span>
         </p>
         <p>
-          <span style="color: darkcyan; font-family: cursive;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Distinctio recusandae omnis beatae aliquam, cupiditate ipsa ducimus consequuntur facilis perspiciatis dolore
-            totam sed hic in. Cum eaque vitae eius reprehenderit aliquam! Fuga, totam! Molestias, repellat ratione
-            deleniti dolores laboriosam tempora velit mollitia. Quibusdam ipsam deserunt dolore. Laborum eum ea officiis
-            ipsum.</span>
+          <span style="color: darkblue; font-weight: 900; font-style: italic; font-size: x-large;">Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Distinctio recusandae omnis beatae aliquam, cupiditate ipsa ducimus
+            consequuntur facilis perspiciatis dolore totam sed hic in. Cum eaque vitae eius reprehenderit aliquam! Fuga,
+            totam! Molestias, repellat ratione deleniti dolores laboriosam tempora velit mollitia. Quibusdam ipsam
+            deserunt dolore. Laborum eum ea officiis ipsum.</span>
         </p>
-      </div>
     </main>
 
     <footer>
