--- a/13-HTML&CSS-Intro/inline-styles.html
+++ b/13-HTML&CSS-Intro/inline-styles.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3. Order and Unordered Lists</title>
+    <title>11. CSS Basics: Inline Styles</title>
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -15,23 +15,7 @@
 
     <main>
       <div>
-        <h1>Lists</h1>
-        <br>
-        <h2>Ordered</h2>
-        <ol>
-          <li>One</li>
-          <li>Two</li>
-          <li>Three</li>
-          <li>Four</li>
-        </ol>
-        <br>
-        <h2>Unordered</h2>
-        <ul>
-          <li>Five</li>
-          <li>Six</li>
-          <li>Seven</li>
-          <li>Eight</li>
-        </ul>
+        <h1>CSS Basics: Inline Styles</h1>
       </div>
     </main>
 
