--- a/13-HTML&CSS-Intro/images.html
+++ b/13-HTML&CSS-Intro/images.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>HTML & CSS – Exercises</h1>
+      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
