--- a/index.html
+++ b/index.html
@@ -4,50 +4,50 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links</title>
+    <title>Tasks</title>
     <link rel="stylesheet" href="13-HTML&CSS-Intro/styles.css">
   </head>
 
   <body>
     <header>
-      <h1>HTML & CSS – Exercises</h1>
+      <h1>Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</h1>
     </header>
 
     <main>
       <div>
-        <p>
-          <a href="https://careers.sirma.com/sirmaacademy.html">
-            Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</a>
-        </p>
+        <h2>HTML & CSS Intro</h2>
         <ol>
           <li>
-            <p><a href="13-HTML&CSS-Intro/headers.html">Headers</a></p>
+            <p><a href="/13-html&css-intro/headers.html">Headers</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
+            <p><a href="/13-html&css-intro/paragraphs.html">Paragraphs</a></p>
 
           <li>
-            <p><a href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
+            <p><a href="/13-html&css-intro/nested-lists.html">Order and Unordered Lists</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/links.html">Links</a></p>
+            <p><a href="/13-html&css-intro/links.html">Links</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/images.html">Images</a></p>
+            <p><a href="/13-html&css-intro/images.html">Images</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/table.html">Table</a></p>
+            <p><a href="/13-html&css-intro/table.html">Table</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/forms.html">Forms</a></p>
+            <p><a href="/13-html&css-intro/forms.html">Forms</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
+            <p><a href="/13-html&css-intro/text-formatting.html">Text Formatting</a></p>
           <li>
-            <p><a href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
+            <p><a href="/13-html&css-intro/inline-elements.html">Inline Elements</a></p>
           </li>
           <li>
-            <p><a href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
+            <p><a href="/13-html&css-intro/block-elements.html">Block Elements</a></p>
+          </li>
+          <li>
+            <p><a href="/13-html&css-intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
           </li>
         </ol>
       </div>
