--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@
         <h2>HTML & CSS Intro</h2>
         <ol>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/headers.html">Headers</a></p>
+            <p><a href="13-HTML&CSS-Intro/headers.html">Headers</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
+            <p><a href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
 
           <li>
-            <p><a href="/13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
+            <p><a href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/links.html">Links</a></p>
+            <p><a href="13-HTML&CSS-Intro/links.html">Links</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/images.html">Images</a></p>
+            <p><a href="13-HTML&CSS-Intro/images.html">Images</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/table.html">Table</a></p>
+            <p><a href="13-HTML&CSS-Intro/table.html">Table</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/forms.html">Forms</a></p>
+            <p><a href="13-HTML&CSS-Intro/forms.html">Forms</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
+            <p><a href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
+            <p><a href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
+            <p><a href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
           </li>
           <li>
-            <p><a href="/13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
+            <p><a href="13-html&css-intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
           </li>
         </ol>
       </div>
