--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p><a href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
           </li>
           <li>
-            <p><a href="13-html&css-intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
+            <p><a href="/13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
           </li>
         </ol>
       </div>
