--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <li>
             <p><a href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
           </li>
+          <li>
+            <p><a href="13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
+          </li>
         </ol>
       </div>
     </main>
