--- a/13-HTML&CSS-Intro/inline-styles.html
+++ b/13-HTML&CSS-Intro/inline-styles.html
@@ -16,6 +16,37 @@
     <main>
       <div>
         <h1>CSS Basics: Inline Styles</h1>
+        <p style="color: red; font-weight: 700; font-size:smaller;">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
+          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+          Animi sequi excepturi maiores ullam.
+        </p>
+        <p style="color: darkred; font-weight: 800; font-size: medium;">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia, dolores necessitatibus
+          asperiores, fugit odit animi consequuntur non perspiciatis beatae unde. Repellendus quasi illo libero dicta
+          delectus maxime vero? Quaerat.
+        </p>
+        <p style="color: darkolivegreen; font-weight: 900; font-size: large;">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
+          commodi sapiente soluta neque, excepturi aperiam, culpa est amet eius. Saepe veritatis rerum corrupti ipsam
+          dolorum reprehenderit non. Dolorum omnis maiores commodi natus dignissimos modi harum rerum eum exercitationem
+          necessitatibus.
+        </p>
+        <p style="color: darkgreen; font-weight: bold; font-size: larger ;">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio recusandae omnis beatae aliquam,
+          cupiditate ipsa ducimus consequuntur facilis perspiciatis dolore illum nihil voluptate placeat totam sed hic
+          in, saepe ab accusamus sint. Cum eaque vitae eius reprehenderit aliquam! Fuga, totam! Molestias, repellat
+          ratione deleniti dolores laboriosam tempora doloremque distinctio velit mollitia. Error ducimus quisquam,
+          mollitia sapiente exercitationem voluptate similique facilis cupiditate velit cum modi quibusdam ipsam
+          deserunt dolore.
+        </p>
+        <p style="color: darkcyan; font-weight: bolder; font-size: x-large;">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam tenetur nostrum, quasi impedit possimus
+          ratione sapiente consectetur pariatur, sunt at delectus facere odio optio dolor recusandae culpa? Ad
+          blanditiis laborum vel ipsum, commodi voluptatum doloremque. Impedit distinctio asperiores fugit qui error
+          obcaecati deleniti voluptatem, repellendus nihil aspernatur animi soluta molestiae rem tempore dolorem veniam
+          fuga perspiciatis. Illum iste dolorem voluptas rem ducimus voluptatem, voluptatibus explicabo recusandae.
+        </p>
       </div>
     </main>
 
