--- a/13-HTML&CSS-Intro/links.html
+++ b/13-HTML&CSS-Intro/links.html
@@ -36,11 +36,11 @@
         <p>
           <a href="https://app.letsdefend.io/path/comptia-cysa-preparation-path" target="_blank">
             CompTIA CySA+ Preparation Path &nbsp;–&nbsp; Certification for cybersecurity analysts, SOC analysts,
-            security engineers ...
+            security engineers ...</a>
         </p>
         <p>
           <a href="https://www.coursera.org/google-certificates/cybersecurity-certificate" target="_blank">
-            Google Cybersecurity Professional Certificate &nbsp;–&nbsp; Professional Certificate – 8 course series
+            Google Cybersecurity Professional Certificate &nbsp;–&nbsp; Professional Certificate – 8 course series</a>
         </p>
         <p>
           <a href="https://skillsforall.com/course/introduction-to-cybersecurity?courseLang=en-US" target="_blank">
