--- a/13-HTML&CSS-Intro/paragraphs.html
+++ b/13-HTML&CSS-Intro/paragraphs.html
@@ -18,11 +18,13 @@
         <h1>Paragraphs</h1>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
-          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad. </p>
+          esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+        </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia, dolores necessitatibus
           asperiores, fugit odit animi consequuntur non perspiciatis beatae unde. Repellendus quasi illo libero dicta
-          delectus maxime vero? Quaerat. </p>
+          delectus maxime vero? Quaerat.
+        </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
           commodi sapiente soluta neque, excepturi aperiam, culpa est amet eius. Saepe veritatis rerum corrupti ipsam
