--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="bg">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks</title>
-    <link rel="stylesheet" href="13-HTML&CSS-Intro/styles.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
   <body>
@@ -15,47 +14,109 @@
 
     <main>
       <div>
-        <h2>HTML & CSS Intro</h2>
-        <ol>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/headers.html">Headers</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
+        <nav>
+          <a class="ex" href="#section1" onclick="showSection('section1'); return false;">HTML & CSS
+            Intro</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="ex" href="#section2" onclick="showSection('section2'); return false;">CSS Selectors</a>
+        </nav>
+        <br>
+        <h2 id="section1">
+          <a class="ex" href="#section1" onclick="toggleSection('section1'); return false;">HTML & CSS Intro –
+            Tasks</a>
+        </h2>
+        <section>
+          <ol>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/headers.html">Headers</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/links.html">Links</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/images.html">Images</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/table.html">Table</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/forms.html">Forms</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/internal-styles.html">CSS Basics: Internal Styles</a></p>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/external-styles.html">CSS Basics: External Styles</a></p>
+            </li>
+          </ol>
+        </section>
 
-          <li>
-            <p><a href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/links.html">Links</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/images.html">Images</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/table.html">Table</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/forms.html">Forms</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
-          </li>
-          <li>
-            <p><a href="13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
-          </li>
-        </ol>
+        <h2 id="section2">
+          <a class="ex" href="#section2" onclick="toggleSection('section2'); return false;">CSS Selectors – Tasks</a>
+        </h2>
+        <section>
+        </section>
       </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
-  </body>
 
+    <script>
+      function showSection(sectionId) {
+        const sections = document.querySelectorAll('section');
+        sections.forEach(section => section.classList.remove('active'));
+
+        const selectedSection = document.querySelector(`#${sectionId} + section`);
+        selectedSection.classList.add('active');
+      }
+
+      function toggleSection(sectionId) {
+        const selectedSection = document.querySelector(`#${sectionId} + section`);
+        const isActive = selectedSection.classList.toggle('active');
+
+        if (isActive) {
+          history.pushState({ sectionId }, "", `#${sectionId}`);
+        } else {
+          history.pushState({}, "", `#`);
+        }
+      }
+
+      window.addEventListener('popstate', function (event) {
+        if (event.state && event.state.sectionId) {
+          showSection(event.state.sectionId);
+        } else {
+          const sections = document.querySelectorAll('section');
+          sections.forEach(section => section.classList.remove('active'));
+        }
+      });
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const initialSection = location.hash ? location.hash.substring(1) : null;
+        if (initialSection) {
+          showSection(initialSection);
+        } else {
+          document.querySelector('section').classList.add('active');
+        }
+      });
+    </script>
+  </body>
 </html>
