--- a/13-HTML&CSS-Intro/internal-styles.html
+++ b/13-HTML&CSS-Intro/internal-styles.html
@@ -48,22 +48,18 @@
       <div>
         <h1>CSS Basics: Internal Styles</h1>
         <p id="paragraph-1">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-          voluptas
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
           esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
           Animi sequi excepturi maiores ullam.
         </p>
         <p id="paragraph-2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia, dolores necessitatibus
           asperiores, fugit odit animi consequuntur non perspiciatis beatae unde. Repellendus quasi illo libero dicta
-          delectus maxime vero? Quaerat.
-        </p>
+          delectus maxime vero? Quaerat. </p>
         <p id="paragraph-3">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati
-          eaque
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
           commodi sapiente soluta neque, excepturi aperiam, culpa est amet eius. Saepe veritatis rerum corrupti ipsam
-          dolorum reprehenderit non. Dolorum omnis maiores commodi natus dignissimos modi harum rerum eum
-          exercitationem
+          dolorum reprehenderit non. Dolorum omnis maiores commodi natus dignissimos modi harum rerum eum exercitationem
           necessitatibus.
         </p>
         <p id="paragraph-4">
@@ -78,8 +74,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam tenetur nostrum, quasi impedit possimus
           ratione sapiente consectetur pariatur, sunt at delectus facere odio optio dolor recusandae culpa? Ad
           blanditiis laborum vel ipsum, commodi voluptatum doloremque. Impedit distinctio asperiores fugit qui error
-          obcaecati deleniti voluptatem, repellendus nihil aspernatur animi soluta molestiae rem tempore dolorem
-          veniam
+          obcaecati deleniti voluptatem, repellendus nihil aspernatur animi soluta molestiae rem tempore dolorem veniam
           fuga perspiciatis. Illum iste dolorem voluptas rem ducimus voluptatem, voluptatibus explicabo recusandae.
         </p>
       </div>
