--- a/index.html
+++ b/index.html
@@ -72,6 +72,46 @@
           <a class="ex" href="#section2" onclick="toggleSection('section2'); return false;">CSS Selectors – Tasks</a>
         </h2>
         <section>
+          <ol>
+            <li>
+              Type Selector
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/type-selector-1.html">Style all paragraph elements</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/type-selector-2.html">Style all heading elements</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/type-selector-3.html">Style different HTML elements</a></p>
+                </li>
+              </ul>
+            </li>
+            <li>
+              Class Selector
+              <ul>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-1.html">Change the color of text inside
+                      elements</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-2.html">Change the background color of
+                      elements</a></p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-3.html">Common style to multiple elements</a>
+                  </p>
+                </li>
+                <li>
+                  <p><a class="ex" href="14-CSS-Selectors/class-selector-4.html">Change the background color of
+                      elements</a></p>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/percentage-width.html">Percentage Width</a></p>
+            </li>
+          </ol>
         </section>
       </div>
     </main>
