--- a/13-HTML&CSS-Intro/images.html
+++ b/13-HTML&CSS-Intro/images.html
@@ -10,16 +10,12 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Images</h1>
-        <p>
-          “Other than primates, the cat-human comparison is one of the closest you can get,” in terms of genome
-          organization ...
-        </p>
         <p>
           <img src="./cat-1.jpg" width=42% alt="Human Genomes Are Surprisingly Cat-Like">
           &nbsp;<img src="./cat-2.jpg" width=56% alt="Human Genomes Are Surprisingly Cat-Like">
@@ -29,7 +25,7 @@
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
