--- a/13-HTML&CSS-Intro/inline-styles.html
+++ b/13-HTML&CSS-Intro/inline-styles.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>CSS Basics: Inline Styles</h1>
         <p style="color: red; font-weight: 700; font-size:smaller;">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
@@ -51,7 +51,7 @@
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
