--- a/13-HTML&CSS-Intro/links.html
+++ b/13-HTML&CSS-Intro/links.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Links</h1>
         <p>
           <a href="https://egov.bg/wps/portal/egov/info-pages/sitemap" target="_blank"> Министерство на електронното
@@ -85,11 +85,12 @@
             <p><a href="./block-elements.html">Block Elements</a></p>
           </li>
         </ol>
+        <br>
       </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
