--- a/13-HTML&CSS-Intro/text-formatting.html
+++ b/13-HTML&CSS-Intro/text-formatting.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Text Formatting</h1>
         <p>
           <strong>Lorem ipsum dolor</strong>, <em>sit amet</em> consectetur adipisicing elit. <b>Minus quibusdam
@@ -63,6 +63,6 @@
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
