--- a/14-CSS-Selectors/type-selector-1.html
+++ b/14-CSS-Selectors/type-selector-1.html
@@ -16,18 +16,18 @@
 
   <body>
     <header>
-      <h1><a href="../index.html#section2" section.active class="header-decoration">CSS Selectors</a></h1>
+      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors</a></h1>
     </header>
 
     <main>
-      <div id="main-content">
+      <div id="main">
         <p>This is a paragraph.</p>
         <p>Style me with CSS!</p>
       </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
