--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <body>
     <header>
-      <h1>Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</h1>
+      <h1 id="header">Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <nav>
           <a class="ex" href="#section1" onclick="showSection('section1'); return false;">HTML & CSS
             Intro</a>
@@ -117,7 +117,7 @@
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
 
     <script>
