--- a/13-HTML&CSS-Intro/headers.html
+++ b/13-HTML&CSS-Intro/headers.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Heading</h1>
         <h2>Heading</h2>
         <h3>Heading</h3>
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
