--- a/13-HTML&CSS-Intro/inline-elements.html
+++ b/13-HTML&CSS-Intro/inline-elements.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Inline Elements</h1>
         <p>
           <span style="color: darkred; font-weight: bold; font-size: x-large;">Lorem ipsum dolor, sit amet consectetur
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
