--- a/13-HTML&CSS-Intro/paragraphs.html
+++ b/13-HTML&CSS-Intro/paragraphs.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Paragraphs</h1>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non voluptas
@@ -58,10 +58,11 @@
           illo minus omnis. Itaque, ratione. Numquam vitae modi quia sit deleniti inventore nulla hic vero neque eaque!
           Sunt in ut, provident illo quam obcaecati.
         </p>
+        <br>
       </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
