--- a/13-HTML&CSS-Intro/table.html
+++ b/13-HTML&CSS-Intro/table.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <h1><a href="../index.html" class="header-decoration">HTML & CSS – Exercises</a></h1>
+      <h1 id="header"><a href="../index.html#section1" section.active>HTML & CSS – Exercises</a></h1>
     </header>
 
     <main>
-      <div>
+      <div id="main">
         <h1>Table</h1>
         <table>
           <thead>
@@ -42,11 +42,12 @@
             </tr>
           </tbody>
         </table>
+        <br>
       </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
