--- a/14-CSS-Selectors/class-selector-3.html
+++ b/14-CSS-Selectors/class-selector-3.html
@@ -21,19 +21,19 @@
 
   <body>
     <header>
-      <h1><a href="../index.html#section2" section.active class="header-decoration">CSS Selectors</a></h1>
+      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors</a></h1>
     </header>
 
     <main>
-      <section id="main-content">
+      <div id="main">
         <div class="common-style">Element 1</div>
         <p class="common-style">Element 2</p>
         <p>Element 3</p>
-      </section>
+      </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
