--- a/14-CSS-Selectors/percentage-width.html
+++ b/14-CSS-Selectors/percentage-width.html
@@ -22,17 +22,17 @@
 
   <body>
     <header>
-      <h1><a href="../index.html#section2" section.active class="header-decoration">CSS Selectors</a></h1>
+      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors</a></h1>
     </header>
 
     <main>
-      <section id="main-content">
+      <div id="main">
         <div class="percentage-width">Resize the window to see me change!</div>
-      </section>
+      </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
