--- a/14-CSS-Selectors/type-selector-3.html
+++ b/14-CSS-Selectors/type-selector-3.html
@@ -27,19 +27,19 @@
 
   <body>
     <header>
-      <h1><a href="../index.html#section2" section.active class="header-decoration">CSS Selectors</a></h1>
+      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors</a></h1>
     </header>
 
     <main>
-      <section id="main-content">
+      <div id="main">
         <h1>Heading 1</h1>
         <p>Paragraph text.</p>
         <div>Div content.</div>
-      </section>
+      </div>
     </main>
 
     <footer>
-      <p>&copy;&nbsp; Sirma Academy &nbsp; 2024
+      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
     </footer>
   </body>
 
