--- a/14-CSS-Selectors/percentage-width.html
+++ b/14-CSS-Selectors/percentage-width.html
@@ -8,27 +8,29 @@
     <link rel="stylesheet" href="styles.css">
     <style>
       .percentage-width {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 70px;
         width: 50%;
+        border: 2px solid red;
         background-color: darkcyan;
         text-align: center;
-        font-size: large;
-        font-weight: bold;
+        font-size: 24px;
         color: white;
-        padding: 20px;
-        box-sizing: border-box;
+        padding: 10px;
       }
     </style>
   </head>
 
   <body>
     <header>
-      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors</a></h1>
+      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors – Exercises</a></h1>
     </header>
 
     <main>
-      <div id="main">
-        <div class="percentage-width">Resize the window to see me change!</div>
-      </div>
+      <!-- <div id="main"> -->
+      <div class="percentage-width">Resize the window to see me change!</div>
+      <!-- </div> -->
     </main>
 
     <footer>
