--- a/14-CSS-Selectors/type-selector-1.html
+++ b/14-CSS-Selectors/type-selector-1.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors</a></h1>
+      <h1 id="header"><a href="../index.html#section2" section.active>CSS Selectors – Exercises</a></h1>
     </header>
 
     <main>
