--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
     <main>
       <div id="main">
         <nav>
-          <a class="ex" href="#section1" onclick="showSection('section1'); return false;">HTML & CSS
-            Intro</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="ex" href="#section2" onclick="showSection('section2'); return false;">CSS Selectors</a>
+          <button onclick="showSection('section1'); return false;">HTML & CSS Intro</button>
+          &nbsp;&nbsp;&nbsp;
+          <button onclick="showSection('section2'); return false;">CSS Selectors</button>
         </nav>
-        <br>
         <h2 id="section1">
-          <a class="ex" href="#section1" onclick="toggleSection('section1'); return false;">HTML & CSS Intro –
-            Tasks</a>
+          <a class="ex" href="#section1" onclick="toggleSection('section1'); return false;">HTML & CSS Intro – Tasks</a>
         </h2>
         <section>
           <ol>
@@ -113,6 +110,7 @@
             </li>
           </ol>
         </section>
+        <br>
       </div>
     </main>
 
