--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <li>
               <p><a class="ex" href="14-CSS-Selectors/percentage-width.html">Percentage Width</a></p>
             </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/nested-divs.html">Nested Divs</a></p>
+            </li>
           </ol>
         </section>
         <br>
