--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
             <li>
               <p><a class="ex" href="14-CSS-Selectors/nested-divs.html">Nested Divs</a></p>
             </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/pixel-width.html">Pixel Width</a></p>
+            </li>
           </ol>
         </section>
         <br>
