--- a/13-HTML&CSS-Intro/external-styles.html
+++ b/13-HTML&CSS-Intro/external-styles.html
@@ -25,7 +25,7 @@
         <p id="paragraph-2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia, dolores necessitatibus
           asperiores, fugit odit animi consequuntur non perspiciatis beatae unde. Repellendus quasi illo libero dicta
-          delectus maxime vero? Quaerat.
+          delectus maxime vero?
         </p>
         <p id="paragraph-3">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
