--- a/13-HTML&CSS-Intro/inline-elements.html
+++ b/13-HTML&CSS-Intro/inline-elements.html
@@ -20,32 +20,31 @@
           <span style="color: darkred; font-weight: bold; font-size: x-large;">Lorem ipsum dolor, sit amet consectetur
             adipisicing.</span> &nbsp; <span style="color: darkblue; font-weight: bold; font-size: larger;">Minus
             quibusdam sint, aliquam ab non esse necessitatibus consequatur?</span>
-          &nbsp; <a href="https://demianvassilev.github.io/SirmaAcademy/" target="_blank"><span
-              style="color: darkgreen; text-align: center; font-weight: 700; font-size: large;">Quasi illum qui facilis
-              itaque iste distinctio eaque similique ad</span></a>
+          &nbsp; <a href="https://demianvassilev.github.io/SirmaAcademy/" target="_blank">
+            <span style="color: darkgreen; text-align: center; font-weight: 700; font-size: large;">Quasi illum qui
+              facilis itaque iste distinctio.</span></a>
         </p>
         <p>
-          <span style="color: green; font-weight: bold; font-size: x-large; font-style: italic;">Lorem ipsum dolor
+          <span style="color: green; font-style: italic; font-weight: bold; font-size: x-large;">Lorem ipsum dolor
             sit amet &nbsp; <a href="https://DemianVassilev.github.io/SirmaAcademy/"><img src="./cat-1.jpg"
                 alt="Human Genomes Are Surprisingly Cat-Like" width="220px" style="vertical-align: middle;"></a>
-            &nbsp;consectetur adipisicing elit.</span> &nbsp;
-          <span style="color: darkgreen; font-style: italic; font-weight: bolder;">Aspernatur mollitia, dolores
-            necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?
-            &nbsp;Quaerat.</span>
+            &nbsp;consectetur adipisicing.</span> &nbsp;
+          <span style="color: darkgreen; font-style: italic; font-weight:700;">Aspernatur mollitia, dolores
+            necessitatibus asperiores. &nbsp;Repellendus quasi libero dicta delectus maxime vero?</span>
         </p>
         <p>
           <span
-            style="color: darkcyan; font-weight: bold; font-style: italic; font-size: x-large; font-family: cursive;">Lorem
+            style="color: darkcyan; font-style: italic;font-weight: bold;  font-size: x-large; font-family: cursive;">Lorem
             ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
             commodi sapiente soluta neque. Saepe veritatis rerum corrupti ipsam dolorum reprehenderit non. Animi sequi
             excepturi maiores ullam.</span>
         </p>
         <p>
-          <span style="color: darkblue; font-weight: 900; font-style: italic; font-size: x-large;">Lorem ipsum dolor
+          <span style="color: darkblue; font-style: italic; font-weight: 900; font-size: x-large;">Lorem ipsum dolor
             sit amet consectetur adipisicing elit. Distinctio recusandae omnis beatae aliquam, cupiditate ipsa ducimus
             consequuntur facilis perspiciatis dolore totam sed hic in. Cum eaque vitae eius reprehenderit aliquam! Fuga,
             totam! Molestias, repellat ratione deleniti dolores laboriosam tempora velit mollitia. Quibusdam ipsam
-            deserunt dolore. Laborum eum ea officiis ipsum.</span>
+            deserunt dolore. Laborum eum ea.</span>
         </p>
     </main>
 
