--- a/13-HTML&CSS-Intro/inline-styles.html
+++ b/13-HTML&CSS-Intro/inline-styles.html
@@ -24,7 +24,7 @@
         <p style="color: darkred; font-weight: 800; font-size: medium;">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia, dolores necessitatibus
           asperiores, fugit odit animi consequuntur non perspiciatis beatae unde. Repellendus quasi illo libero dicta
-          delectus maxime vero? Quaerat.
+          delectus maxime vero?
         </p>
         <p style="color: darkolivegreen; font-weight: 900; font-size: large;">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
@@ -40,7 +40,7 @@
           mollitia sapiente exercitationem voluptate similique facilis cupiditate velit cum modi quibusdam ipsam
           deserunt dolore.
         </p>
-        <p style="color: darkcyan; font-weight: bolder; font-size: x-large;">
+        <p style="color: darkcyan; font-weight: 700; font-size: x-large;">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam tenetur nostrum, quasi impedit possimus
           ratione sapiente consectetur pariatur, sunt at delectus facere odio optio dolor recusandae culpa? Ad
           blanditiis laborum vel ipsum, commodi voluptatum doloremque. Impedit distinctio asperiores fugit qui error
