--- a/13-HTML&CSS-Intro/internal-styles.html
+++ b/13-HTML&CSS-Intro/internal-styles.html
@@ -33,7 +33,7 @@
 
       #paragraph-5 {
         color: darkcyan;
-        font-weight: bolder;
+        font-weight: 700;
         font-size: x-large;
       }
     </style>
@@ -55,7 +55,8 @@
         <p id="paragraph-2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur mollitia, dolores necessitatibus
           asperiores, fugit odit animi consequuntur non perspiciatis beatae unde. Repellendus quasi illo libero dicta
-          delectus maxime vero? Quaerat. </p>
+          delectus maxime vero?
+        </p>
         <p id="paragraph-3">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur itaque repellat non velit obcaecati eaque
           commodi sapiente soluta neque, excepturi aperiam, culpa est amet eius. Saepe veritatis rerum corrupti ipsam
