--- a/14-CSS-Selectors/nested-divs.html
+++ b/14-CSS-Selectors/nested-divs.html
@@ -9,22 +9,25 @@
     <style>
       .parent {
         margin-top: 70px;
+        margin-bottom: 70px;
         margin-left: auto;
         margin-right: auto;
         border: 1px solid red;
         background-color: darkturquoise;
         padding: 20px;
-        width: 50%;
+        width: 60%;
+        /* Set width to 60% */
       }
 
       .child {
         border: 2px solid red;
         background-color: darkcyan;
-        text-align: center;
+        text-align: left;
         font-size: 24px;
         color: white;
         padding: 10px;
         width: 50%;
+        /* Set width to 50% */
       }
     </style>
   </head>
@@ -35,11 +38,11 @@
     </header>
 
     <main>
-      <!-- <div id="main"> -->
-      <div class="parent">
-        <div class="child">I'm 50% of my parent.</div>
+      <div id="main">
+        <div class="parent">
+          <div class="child">I'm 50% of my parent.</div>
+        </div>
       </div>
-      <!-- </div> -->
     </main>
 
     <footer>
