--- a/14-CSS-Selectors/pixel-width.html
+++ b/14-CSS-Selectors/pixel-width.html
@@ -12,7 +12,7 @@
         margin-bottom: 70px;
         border: 1px solid red;
         background-color: darkturquoise;
-        text-align: center;
+        text-align: left;
         font-size: 24px;
         color: white;
         padding: 10px;
