--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
             <li>
               <p><a class="ex" href="14-CSS-Selectors/pixel-width.html">Pixel Width</a></p>
             </li>
+            <li>
+              <p><a class="ex" href="14-CSS-Selectors/pixel-vs-percentage-width.html">Pixel vs Percentage Width</a></p>
+            </li>
           </ol>
         </section>
-        <br>
       </div>
     </main>
 
