--- a/14-CSS-Selectors/pixel-vs-percentage-width.html
+++ b/14-CSS-Selectors/pixel-vs-percentage-width.html
@@ -4,17 +4,28 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Percentage Width Exercise</title>
+    <title>Pixel vs Percentage Width Exercise</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+      .fixed-width {
+        margin-top: 70px;
+        margin-bottom: 70px;
+        border: 1px solid red;
+        background-color: darkturquoise;
+        text-align: left;
+        font-size: 24px;
+        color: white;
+        padding: 10px;
+        width: 300px;
+        /* Set width to 300px */
+      }
+
       .percentage-width {
         margin-top: 70px;
         margin-bottom: 70px;
-        margin-left: auto;
-        margin-right: auto;
         border: 2px solid red;
         background-color: darkcyan;
-        text-align: center;
+        text-align: left;
         font-size: 24px;
         color: white;
         padding: 10px;
@@ -31,7 +42,8 @@
 
     <main>
       <div id="main">
-        <div class="percentage-width">Resize the window to see me change!</div>
+        <div class="fixed-width">I have a fixed width of 300px.</div>
+        <div class="percentage-width">I have a width of 50%.</div>
       </div>
     </main>
 
