--- a/14-CSS-Selectors/percentage-width.html
+++ b/14-CSS-Selectors/percentage-width.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="styles.css">
     <style>
       .percentage-width {
+        margin: 0;
         margin-top: 70px;
         margin-bottom: 70px;
-        margin-left: auto;
-        margin-right: auto;
         border: 2px solid red;
         background-color: darkcyan;
-        text-align: center;
+        text-align: left;
         font-size: 24px;
         color: white;
         padding: 10px;
