--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <body>
     <header>
-      <h1 id="header">Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</h1>
+      <!-- <h1 id="header">Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</h1> -->
+      <h1 id="header">Front-End with JavaScript</h1>
     </header>
 
     <main>
