--- a/13-HTML&CSS-Intro/internal-styles.html
+++ b/13-HTML&CSS-Intro/internal-styles.html
@@ -82,7 +82,9 @@
     </main>
 
     <footer>
-      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
+      <p id="footer">&copy;&nbsp;
+        <a href="https://careers.sirma.com/sirmaacademy.html" target="_blank">Sirma Academy &nbsp; 2024</a>
+      </p>
     </footer>
   </body>
 
