--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="bg">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -124,7 +125,9 @@
     </main>
 
     <footer>
-      <p id="footer">&copy;&nbsp; Sirma Academy &nbsp; 2024</p>
+      <p id="footer">&copy;&nbsp;
+        <a href="https://careers.sirma.com/sirmaacademy.html" target="_blank">Sirma Academy &nbsp; 2024</a>
+      </p>
     </footer>
 
     <script>
